Replaced unnecessary CSS transforms with margins, set text-align on body and removed on other elements, condensed background statements in CSS, fixed alignment of top-middle feature image etc

--- a/static/style.css
+++ b/static/style.css
@@ -5,17 +5,18 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,600);
 
 * {
-  font-family: -apple-system, 'Helvetica', 'Open Sans', sans-serif;
   box-sizing: border-box;
 }
 
 body {
+  font-family: -apple-system, 'Helvetica', 'Open Sans', sans-serif;
   margin: 0 auto;
   min-height: 100vh;
   max-width: 100vw;
   background: -moz-linear-gradient(top, #FFFFFF 0%, #FEFEFE 75%, #EFEFEF 100%);
   background: -webkit-linear-gradient(top, #FFFFFF 0%, #FEFEFE 75%, #EFEFEF 100%);
   background: linear-gradient(to bottom, #FFFFFF 0%, #FEFEFE 75%, #EFEFEF 100%);
+  text-align: center;
 }
 
 html {
@@ -31,7 +32,6 @@ a {
   font-weight: 200;
   letter-spacing: -1px;
   font-size: 95px;
-  text-align: center;
   margin-top: 30px;
   margin-bottom: 0px;
   color: black;
@@ -43,7 +43,6 @@ a {
   line-height: 34px;
   letter-spacing: -0.4px;
   color: #B0B0B0;
-  text-align: center;
   margin-top: 0px;
 }
 
@@ -51,10 +50,7 @@ a {
   width: 38px;
   height: 3px;
   background-color: #DBDBDB;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  margin-left: 50%;
-  transform: translateX(-50%);
+  margin: 50px auto;
 }
 
 .general-text {
@@ -66,17 +62,16 @@ a {
 .button {
   width: 220px;
   height: 55px;
-  background: none;
+  background: #1B1B1B;
   border: 2px solid #1B1B1B;
   border-radius: 10px;
   color: white;
-  background-color: #1B1B1B;
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 1px;
   text-transform: uppercase;
   cursor: pointer;
-  transition: all 0.3s ease-in;
+  transition: color 0.3s ease-in, background-color 0.3s ease-in;
 }
 
 .button:hover {
@@ -88,10 +83,7 @@ a {
 
 #hero-header {
   position: relative;
-  background-image: url("../resources/header_full.jpg");
-  background-size: 150vw;
-  background-repeat: no-repeat;
-  background-position: 50% 100%;
+  background: url("../resources/header_full.jpg") no-repeat 50% 100% / 150vw;
   width: 100vw;
   height: 70vh;
 }
@@ -99,14 +91,11 @@ a {
 #hero-description {
   width: 80vw;
   max-width: 1000px;
-  margin-left: 50%;
-  transform: translateX(-50%);
+  margin: 0 auto;
 }
 
 #hero-button-container {
-  text-align: center;
-  margin-top: 70px;
-  margin-bottom: 70px;
+  margin: 70px auto;
 }
 
 #hero-button-container #last-updated {
@@ -124,45 +113,27 @@ a {
 
 /* Parallax */
 
-#parallax-container {
-  position: relative;
+#parallax-wrapper {
+  background: url("../resources/header_full.jpg") no-repeat center / 150vw;
   width: 100vw;
   height: 475px;
 }
 
-#parallax-wrapper {
-  position: absolute;
-  background-image: url("../resources/header_full.jpg");
-  background-size: 150vw;
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 100%;
-  height: 100%;
-}
-
 /* Key points */
-
-#key-points {
-  text-align: center;
-}
 
 #key-points-table {
   position: relative;
   width: 100%;
   max-width: 1000px;
-  margin-top: 80px;
-  margin-bottom: 0px;
-  margin-left: 50%;
-  transform: translateX(-50%);
+  margin: 80px auto 0 auto;
   overflow: hidden;
 }
 
 #key-points-table div {
   display: inline-block;
-  float: center;
-  text-align: center;
   width: 33%;
   overflow: hidden;
+  vertical-align: top;
 }
 
 #key-points-table div div {
@@ -173,8 +144,6 @@ a {
   width: 154px;
   height: 154px;
   margin: 0 auto;
-  margin-left: 50%;
-  transform: translateX(-50%);
 }
 
 .key-point-explanations {
@@ -183,11 +152,7 @@ a {
   letter-spacing: 0.35px;
   line-height: 25px;
   width: 80%;
-  text-align: center;
-  margin-top: 0px;
-  margin-bottom: 40px;
-  margin-left: 50%;
-  transform: translateX(-50%);
+  margin: 0 auto 40px auto;
   white-space: normal;
 }
 
@@ -195,7 +160,6 @@ a {
 
 footer {
   margin-top: 10px;
-  text-align: center;
 }
 
 #footer-wrapper {
@@ -204,10 +168,8 @@ footer {
   height: 600px;
   max-width: 1300px;
   overflow: hidden;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  margin-left: 50%;
-  transform: translateX(-50%);
 }
 
 .footer-images {
@@ -227,8 +189,7 @@ footer {
 }
 
 #credit-container {
-  margin-top: 300px;
-  transform: translateY(-50%);
+  margin-top: 250px;
 }
 
 #credit-container h3 {
@@ -253,7 +214,7 @@ footer {
   bottom: -2px;
   background: #4A4A4A;
   height: 1px;
-  transition: all 0.3s ease-in;
+  transition: left 0.3s ease-in, right 0.3s ease-in;
 }
 
 #credit-container h3 a:hover:after {
@@ -262,12 +223,11 @@ footer {
 }
 
 #share-table {
-  margin-left: 50%;
-  transform: translateX(-50%);
+  margin: 0 auto;
 }
 
 #share-table tr td a img {
-  transition: all 0.15s ease-in;
+  transition: transform 0.15s ease-in;
 }
 
 #share-table tr td a img:hover {
@@ -280,19 +240,11 @@ footer {
 }
 
 @media (max-width: 1000px) {
-  #hero-header {
+  #hero-header, #parallax-wrapper {
     background-size: 1440px;
   }
 
-  #parallax-wrapper {
-    background-size: 1440px;
-  }
-
-  #footer-image-left {
-    visibility: hidden;
-  }
-
-  #footer-image-right {
+  #footer-image-left, #footer-image-right {
     visibility: hidden;
   }
 
@@ -310,8 +262,7 @@ footer {
   }
 
   .key-point-images {
-    margin-left: 0%;
-    transform: translateX(0);
+    margin: 0 auto;
   }
 }
 
